--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- FIM BOTSTRAP ICON -->
 
+    <!--LINK GOOGLE FONTS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600&display=swap" rel="stylesheet">
+    <!--Fim LINK GOOGLE FONTS-->
+
     <!-- link CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <!-- FIM link CSS -->
 
-    <title>Netflix</title>
+    <title>Filmes</title>
 </head>
 <body>
     <header>
         <h2>Filmes</h2>
-        <i class="fa fa-search" style="font-size:24px"></i>
+        <i class="fa fa-search" style="font-size:28px"></i>        
     </header>
 
     <section class="pag-filmes-1">
@@ -24,66 +30,66 @@
 
         <div class="flex">
             <div class="box-filmes">
-                <img src="fundo-filme.jpg" alt="">
+                <img src="fundo-filme.webp" alt="">
 
                 <h2>Nome do filme</h2>
-                <p>avaliação</p>
+                <p><i class="fa fa-star" style="font-size:16px"></i> 9.0</p>
                 <button>Detalhes</button>
             </div><!--FIM box-filmes-->
 
             <div class="box-filmes">
-                <img src="fundo-filme.jpg" alt="">
+                <img src="fundo-filme.webp" alt="">
 
                 <h2>Nome do filme</h2>
-                <p>avaliação</p>
+                <p><i class="fa fa-star" style="font-size:16px"></i> 9.0</p>
                 <button>Detalhes</button>
             </div><!--FIM box-filmes-->
 
             <div class="box-filmes">
-                <img src="fundo-filme.jpg" alt="">
+                <img src="fundo-filme.webp" alt="">
 
                 <h2>Nome do filme</h2>
-                <p>avaliação</p>
+                <p><i class="fa fa-star" style="font-size:16px"></i> 9.0</p>
                 <button>Detalhes</button>
             </div><!--FIM box-filmes-->
 
             <div class="box-filmes">
-                <img src="fundo-filme.jpg" alt="">
+                <img src="fundo-filme.webp" alt="">
 
                 <h2>Nome do filme</h2>
-                <p>avaliação</p>
+                <p><i class="fa fa-star" style="font-size:16px"></i> 9.0</p>
                 <button>Detalhes</button>
             </div><!--FIM box-filmes-->
 
             <div class="box-filmes">
-                <img src="fundo-filme.jpg" alt="">
+                <img src="fundo-filme.webp" alt="">
 
                 <h2>Nome do filme</h2>
-                <p>avaliação</p>
+                <p><i class="fa fa-star" style="font-size:16px"></i> 9.0</p>
                 <button>Detalhes</button>
             </div><!--FIM box-filmes-->
 
             <div class="box-filmes">
-                <img src="fundo-filme.jpg" alt="">
+                <img src="fundo-filme.webp" alt="">
 
                 <h2>Nome do filme</h2>
-                <p>avaliação</p>
+                <p><i class="fa fa-star" style="font-size:16px"></i> 9.0</p>
                 <button>Detalhes</button>
             </div><!--FIM box-filmes-->
             
             <div class="box-filmes">
-                <img src="fundo-filme.jpg" alt="">
+                <img src="fundo-filme.webp" alt="">
 
                 <h2>Nome do filme</h2>
-                <p>avaliação</p>
+                <p><i class="fa fa-star" style="font-size:16px"></i> 9.0</p>
                 <button>Detalhes</button>
             </div><!--FIM box-filmes-->
 
             <div class="box-filmes">
-                <img src="fundo-filme.jpg" alt="">
+                <img src="fundo-filme.webp" alt="">
 
                 <h2>Nome do filme</h2>
-                <p>avaliação</p>
+                <p><i class="fa fa-star" style="font-size:16px"></i> 9.0</p>
                 <button>Detalhes</button>
             </div><!--FIM box-filmes-->
 
