--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
 <body>
     <header>
         <h2>Filmes</h2>
-        <i class="fa fa-search" style="font-size:28px"></i>        
+
+        <form method="post" class="search-form">
+            <input type="text" name="search-input" id="search-input" placeholder="Digite o filme aqui" autocomplete="off" class="hide">
+            <button type="submit" id="search-btn">
+                <i class="fa fa-search" style="font-size:28px"></i>
+            </button>
+        </form>
     </header>
 
     <section class="pag-filmes-1">
@@ -96,5 +102,7 @@
         </div><!--Fim flex-->
 
     </section><!--fim pag-filmes-1-->
+
+    <script src="script.js"></script>
 </body>
 </html>
