Conexão com api

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="pag-filmes-1">
         <h1 class="titulo-pag-filmes-1">Recomendados</h1>
 
-        <div class="flex">
+        <div class="flex" id="cards-conatiner">
             <div class="box-filmes">
                 <img src="fundo-filme.webp" alt="">
 
