Consumo de dados da API funcionando

--- a/index.html
+++ b/index.html
@@ -34,71 +34,8 @@
     <section class="pag-filmes-1">
         <h1 class="titulo-pag-filmes-1">Recomendados</h1>
 
-        <div class="flex" id="cards-conatiner">
-            <div class="box-filmes">
-                <img src="fundo-filme.webp" alt="">
-
-                <h2>Nome do filme</h2>
-                <p><i class="fa fa-star" style="font-size:16px"></i> 9.0</p>
-                <button>Detalhes</button>
-            </div><!--FIM box-filmes-->
-
-            <div class="box-filmes">
-                <img src="fundo-filme.webp" alt="">
-
-                <h2>Nome do filme</h2>
-                <p><i class="fa fa-star" style="font-size:16px"></i> 9.0</p>
-                <button>Detalhes</button>
-            </div><!--FIM box-filmes-->
-
-            <div class="box-filmes">
-                <img src="fundo-filme.webp" alt="">
-
-                <h2>Nome do filme</h2>
-                <p><i class="fa fa-star" style="font-size:16px"></i> 9.0</p>
-                <button>Detalhes</button>
-            </div><!--FIM box-filmes-->
-
-            <div class="box-filmes">
-                <img src="fundo-filme.webp" alt="">
-
-                <h2>Nome do filme</h2>
-                <p><i class="fa fa-star" style="font-size:16px"></i> 9.0</p>
-                <button>Detalhes</button>
-            </div><!--FIM box-filmes-->
-
-            <div class="box-filmes">
-                <img src="fundo-filme.webp" alt="">
-
-                <h2>Nome do filme</h2>
-                <p><i class="fa fa-star" style="font-size:16px"></i> 9.0</p>
-                <button>Detalhes</button>
-            </div><!--FIM box-filmes-->
-
-            <div class="box-filmes">
-                <img src="fundo-filme.webp" alt="">
-
-                <h2>Nome do filme</h2>
-                <p><i class="fa fa-star" style="font-size:16px"></i> 9.0</p>
-                <button>Detalhes</button>
-            </div><!--FIM box-filmes-->
+        <div class="flex" id="cards-conatainer">
             
-            <div class="box-filmes">
-                <img src="fundo-filme.webp" alt="">
-
-                <h2>Nome do filme</h2>
-                <p><i class="fa fa-star" style="font-size:16px"></i> 9.0</p>
-                <button>Detalhes</button>
-            </div><!--FIM box-filmes-->
-
-            <div class="box-filmes">
-                <img src="fundo-filme.webp" alt="">
-
-                <h2>Nome do filme</h2>
-                <p><i class="fa fa-star" style="font-size:16px"></i> 9.0</p>
-                <button>Detalhes</button>
-            </div><!--FIM box-filmes-->
-
         </div><!--Fim flex-->
 
     </section><!--fim pag-filmes-1-->
