--- a/site AFM/index.html
+++ b/site AFM/index.html
@@ -11,7 +11,7 @@
         <section class="hdr">
             <div class="logoamf">
                 <img src="img/logoamf.png">
-                <h1>AMJ STORE</h1>
+                <h1>AMF STORE</h1>
             </div>
             <nav>
                 <a href="#">Store</a>
@@ -29,7 +29,9 @@
         </section>
     </header>
     <main>
+        <section class="">
 
+        </section>
     </main>
     <footer>
         
