--- a/site AFM/index.html
+++ b/site AFM/index.html
@@ -34,7 +34,28 @@
         </section>
     </main>
     <footer>
-        
+        <section>
+            <img src="img/banner.jpg">
+        </section>
+        <section>
+            <div class="contimg">
+                <h2>Ajuda</h2>
+                <ul>
+                    <li>Fale Conosco</li>
+                    <li>Produtos</li>
+                    <li>Carrinho</li>
+                </ul>
+            </div>
+            <div class="conttxt">
+                <h2>Redes socias</h2>
+                <ul>
+                    <li>O</li>
+                    <li>O</li>
+                    <li>O</li>
+                </ul>
+            </div>
+            <p>AMFstore © 2024 - Todos os direitos reservados - Proteção de Dados</p>
+        </section>
     </footer>
 </body>
 </html>
