--- a/site AFM/index.html
+++ b/site AFM/index.html
@@ -39,16 +39,14 @@
                 </div>
 
             </div>
-             <div class="nav-list"> 
-            
+             <nav class="nav-list"> 
                     <a href="#">Inicio</a>
                     <a href="#">Nacionais</a>
                     <a href="#">Importados</a>
                     <a href="#">Camisas</a>
                     <a href="#">Calças</a>
                     <a href="#">Tênis</a>
-
-            </div>
+             </nav>
         </section>
 
      
