--- a/site AFM/index.html
+++ b/site AFM/index.html
@@ -81,27 +81,6 @@
         </section>
     </header>
 
-
-    <main>
-            <section class="contmain">
-                <span class="titulo-container-categoria"><p>Descubra qual é o seu estilo</p></span>
-                <div class="container-categoria">
-                <div class="categoria street"> <div class="overlay-categoria"> <div class="titulo-categoria">
-                <p>SOFT</p>
-                <span class="false-button-categoria">Explorar</span>
-                </div></div></div>
-                <div class="categoria street2"><div class="overlay-categoria"> <div class="titulo-categoria">
-                    <p>STREET </p>
-                    <span class="false-button-categoria">Explorar</span>
-                </div></div></div>
-                <div class="categoria vintage"><div class="overlay-categoria"> <div class="titulo-categoria">
-                    <p>VINTAGE</p>
-                    <span class="false-button-categoria">Explorar</span>
-                </div></div></div>
-            </div>
-            <section class="cat">  
-    </main>
-
     <div class="banner-informativo">
 
         <div class="informativo">
@@ -138,6 +117,28 @@
         </div>
     </div>
   
+
+    <main>
+            <section class="contmain">
+                <!-- <span class="titulo-container-categoria"><p>Descubra qual é o seu estilo</p></span> -->
+                <div class="container-categoria">
+                <div class="categoria street"> <div class="overlay-categoria"> <div class="titulo-categoria">
+                <p>SOFT</p>
+                <span class="false-button-categoria">Explorar</span>
+                </div></div></div>
+                <div class="categoria street2"><div class="overlay-categoria"> <div class="titulo-categoria">
+                    <p>STREET </p>
+                    <span class="false-button-categoria">Explorar</span>
+                </div></div></div>
+                <div class="categoria vintage"><div class="overlay-categoria"> <div class="titulo-categoria">
+                    <p>VINTAGE</p>
+                    <span class="false-button-categoria">Explorar</span>
+                </div></div></div>
+            </div>
+            <section class="cat">  
+    </main>
+
+    
 
     <section class="secao-maisVendidos">
         <span class="titulo-secao">Mais Vendidos</span>
