--- a/site AFM/index.html
+++ b/site AFM/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AFM store</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
   
     <link rel="stylesheet" href="https://www.flaticon.com/br/icon-font-gratis">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
